--- a/style.css
+++ b/style.css
@@ -224,6 +224,10 @@ footer {
     flex-direction: column;
     align-items: center
   }
+
+  .carousel {
+    min-width: 50%;
+  }
 }
 
 @media (max-width: 500px) {
